--- a/user-profile/build.gradle
+++ b/user-profile/build.gradle
@@ -22,7 +22,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	// https://mvnrepository.com/artifact/org.projectlombok/lombok
 	compileOnly 'org.projectlombok:lombok:1.18.36'
@@ -37,14 +36,17 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-community-dialects
 	implementation 'org.hibernate.orm:hibernate-community-dialects:6.6.8.Final'
 
+	// https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
+	implementation 'org.hibernate.validator:hibernate-validator:9.0.0.CR1'
+
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
 
+	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
+
 	// https://mvnrepository.com/artifact/org.mockito/mockito-core
 	testImplementation 'org.mockito:mockito-core:5.15.2'
-
-	// https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
-	implementation 'org.hibernate.validator:hibernate-validator:9.0.0.CR1'
 }
 
 tasks.named('test') {
